[gd_scene load_steps=6 format=3 uid="uid://dtlw7kno2uj7m"]

[ext_resource type="Script" path="res://rigid_body_2d.gd" id="1_botjr"]
[ext_resource type="Texture2D" uid="uid://056ac2iatlxa" path="res://icon.svg" id="2_44blv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_iy0s3"]
friction = 0.51

[sub_resource type="RectangleShape2D" id="RectangleShape2D_di2jw"]
size = Vector2(128, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsk2j"]
size = Vector2(146, 138)

[node name="RigidBody2D" type="RigidBody2D"]
position = Vector2(-209, 25)
collision_layer = 4
collision_mask = 7
mass = 0.001
physics_material_override = SubResource("PhysicsMaterial_iy0s3")
linear_velocity = Vector2(0.78, 0.91)
script = ExtResource("1_botjr")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_44blv")

[node name="ColisãoBody" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_di2jw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="ColisãoCheck" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_lsk2j")
debug_color = Color(0.7, 0, 0, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
